
Thu Jun 15 17:46:22 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Change explicit library names to -l<lib> form, and
		change target link line to use $(LD) and associated flags.
	* configure.in - Add shared library usage check.

Fri Jun  9 18:37:43 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Tue May  9 15:52:15 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* krb_auth_su.c (krb5_auth_check): Add missing context
		(wolfgang@wsrcc.com) 

	* ccache.c (krb5_get_nonexp_tkts): Add missing context
		(wolfgang@wsrcc.com) 

	* heuristic.c (get_best_princ_for_target): Missing context cuased
		coredump. 
		(get_best_princ_for_target): Missing contexts in call to
		 		find_either_ticket. 
		(find_either_ticket): Missing context in call of find_ticket
		(get_best_princ_for_target): Add missing context

Thu Mar 16 20:50:32 1995  John Gilmore  (gnu at toad.com)

	* configure.in:  Replace CHECK_STDARG with AC_CHECK_HEADERS.
	* main.c (print_status):  Use HAVE_STDARG_H to control whether to
	declare with ", ..."; not STDARG_PROTOTYPES.
	* ksu.h:  Don't include <stdarg.h> or <varargs.h>, since they
	are already included by "com_err.h".

Thu Mar  2 12:32:17 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:28:36 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 02:11:21 1995  John Gilmore  (gnu at toad.com)

	* ksu.h:  Avoid <krb5/...> and <com_err.h> includes.

Fri Feb 17 18:10:04 1995 Chris Provenzano  (proven@mit.edu)

	* krb_auth_su.c krb5_auth_check()) Call krb5_get_cred_from_kdc()
		with new calling convention.

Mon Feb 06 17:19:04 1995 Chris Provenzano  (proven@mit.edu)

        * krb_auth_su.c Removed krb5_keytype, changed krb5_enctype to
                krb5_enctype *, changed krb5_preauthtype to krb5_preauthtype *