@@ -4,5 +4,6 @@ AC_PROG_INSTALL
 AC_CHECK_LIB(ndbm,main)
 AC_CHECK_LIB(dbm,main)
 AC_CHECK_HEADERS(stdarg.h)
+AC_CHECK_FUNCS(getusershell)
 V5_USE_SHARED_LIB
 V5_AC_OUTPUT_MAKEFILE
